@@ -1,3 +1,8 @@
+2018-01-25  Karl Berry  <karl@freefriends.org>
+
+	* pathsearch.c: more consistent code formatting, doc fixes.
+	No functional code changes.
+
 2018-01-17  Norbert Preining  <norbert@preining.info>
 
 	* mktexlsr (treefile): use mktemp with fallback option for
